--- a/pokemon_entities/templates/pokemon.html
+++ b/pokemon_entities/templates/pokemon.html
@@ -21,7 +21,12 @@
         <img src="{{pokemon.img_url}}" style="height:200px; width:200px">
       </div>
       <div class="m-2 ml-4 col-11 col-sm-8 col-lg-8 col-xl-8">
-        <h1>{{pokemon.title_ru}}</h1>
+        <h1>
+          {{pokemon.title_ru}}
+          {% for element in pokemon.element_types %}
+            <img src="{{element.image.url}}" style="height:20px; width:20px">
+          {% endfor %}
+        </h1>
         <p><b>{{pokemon.title_ru}}</b> (анг. {{pokemon.title_en}}, яп. {{pokemon.title_jp}}) — {{pokemon.description}}</p>
         <hr>
         <div class="mt-4">
@@ -57,13 +62,13 @@
             </div>
           {% endif %}
         </div>
-        {% if pokemon.element_type %}
+        {% if pokemon.element_types %}
           <hr>
           <div class="mt-4">
             <h4>Стихии покемона</h4>
-            {% for element in pokemon.element_type%}
+            {% for element in pokemon.element_types %}
               <div>
-                <img class="pull-left mr-2 float-left" style="height:20px;width:20px;" src="{{element.img}}">
+                <img class="pull-left mr-2 float-left" style="height:20px;width:20px;" src="{{element.image.url}}">
                 <p>{{element.title}}, силён против: {{element.strong_against|join:", "}}</p>
               </div>
             {% endfor %}
@@ -75,9 +80,9 @@
 
     <h1 class="mt-5 mb-2">Карта {{pokemon.title}} в Москве</h1>
     <div class="mb-5">
-      {{map|safe}}  
+      {{map|safe}}
     </div>
   </div>
-  
+
 </body>
 </html>
