--- a/pokemon_entities/templates/pokemon.html
+++ b/pokemon_entities/templates/pokemon.html
@@ -69,7 +69,7 @@
             {% for element in pokemon.element_types %}
               <div>
                 <img class="pull-left mr-2 float-left" style="height:20px;width:20px;" src="{{element.image.url}}">
-                <p>{{element.title}}, силён против: {{element.strong_against|join:", "}}</p>
+                <p>{{element.title}}, силён против: {{element.strong_against.all|join:", "}}</p>
               </div>
             {% endfor %}
           </div>
